Fixed vertical card 6 image going out of bounds.

--- a/src/components/card/VerticalCard6.module.scss
+++ b/src/components/card/VerticalCard6.module.scss
@@ -16,7 +16,6 @@
     > a {
         display: flex;
         flex: 1 1 auto;
-        justify-content: flex-end;
         flex-direction: column;
         outline-offset: 0;
         min-height: 80px;
@@ -68,6 +67,7 @@
         display: flex;
         flex-direction: column;
         align-items: baseline;
+        bottom: 0;
     }
 
     h1 {
